# workspace

./: .gitignore  README.md
InformatikII/: .project
ProgII_15/: .project
ProgII_15/src/: Auto.java
ProgII_16/src/: Auto.java  Auto15.java  TestCar.java
ProgII_17/: .project
ProgII_17/src/: Auto.java  Bestand.java  main.java
ProgII_18/: .project
ProgII_19/src/: Aufgabe19_1.java  Aufgabe19_1TestIncomplete.java  Aufgabe19_1WithErrors.java
ProgII_20/src/: MyQueue.java  MyQueueTest.java
ProgII_21/src/: IhreStrategie.java  InteractivePlayer.java  Testspiel.java
Rechnernetze_02/: .project  sink.txt  source_3.txt  source_small.txt
Rechnernetze_02/src/: Aufgabe2_FileTransferServerUDPjlibcnds.java  Aufgabe3_FileTransferServerUDPjlibcnds.java  Aufgabe6_FileTransferServerUDPjlibcnds.java  Aufgabe7_FileTransferClientUDPjlibcnds.java  Fagadd.java  FileTransferServerUDPjlibcnds.java  Tools.java
VSys_01/src/: DaytimeClient.java
VSys_02/: .project
VSys_02/src/: ZitateClient.java  ZitateServer.java
VSys_03/: .project
VSys_03/src/: Receiver.java  Transmitter.java  UDPSocket.java
VSys_04/: VSys.ucls  pom.xml
eclipse/ProgII_15/: .project
eclipse/ProgII_19/: .project
eclipse/ProgII_20/: .project
eclipse/ProgII_21/: .classpath  .project
eclipse/ProgII_22/: .project
eclipse/ProgII_23/: .project
eclipse/Rechnernetze_02/: .classpath  source_3.txt  source_large.txt
eclipse/VSys_01/: .project
eclipse/VSys_04/: .project
prog1/: README.md
pyqttest/src/gui/: __init__.py  (+3 more)
rust_test/: Cargo.toml
rust_test/src/: main.rs
vsys_06/: .project  pom.xml
(+345 files in other folders)
